tests/e2e/fail/nested_void_array.ep
# COMPILE_ERROR: array element type cannot be void
type Bad {
    values: void[][]
}

fun main(): void {
}
